<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world</string>
    <string name="logout">Logout</string>
    <string name="back_to_login">Back to login</string>
    <string name="check_permissions">Check permissions</string>
    <string name="permission_rationale">Объяснение для чего нужен пермишн</string>
    <string name="httpurlconnection">HttpUrlConnection</string>
    <string name="okhttp">OkHttp</string>
    <string name="retrofit">Retrofit</string>
    <string name="search_image">Search image</string>
    <string name="search">Search</string>
    <string name="images">Images</string>
    <string name="image_list_is_empty">Image list is empty</string>
    <string name="check_retrofit_with_rx">Check retrofit with Rx</string>
</resources>
