<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

    <Button
        android:id="@+id/images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/images" />

    <Button
        android:id="@+id/checkPermissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_permissions" />

    <Button
        android:id="@+id/checkNetworkHttpUrlConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/httpurlconnection" />

    <Button
        android:id="@+id/checkOkhttp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okhttp" />

    <Button
        android:id="@+id/checkRetrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrofit" />

</LinearLayout>